clusters/homelab/infrastructure/authentik/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-tailscale
  namespace: authentik
spec:
  ingressClassName: tailscale
  rules:
    - host: authentik
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-authentik-server
                port:
                  number: 80
  tls:
    - hosts:
        - authentik
